profilelist1exp/unpackaged/objects/Sales_Motion_Matrix__c.object
<CustomObject>
    <description>Sales Motion Matrix</description>
    <fields>
        <fullName>Account_Category__c</fullName>
        <description>Account Category</description>
        <label>Account Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Create_SM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create SM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPP_Tier__c</fullName>
        <label>BPP Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPP_Track__c</fullName>
        <label>BPP Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Enabled__c</fullName>
        <label>Deal Registration Enabled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notification_of_New_MG__c</fullName>
        <label>Internal Notification of New MG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Admin Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Tier__c</fullName>
        <label>Partner Program Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Purchasing_Path__c</fullName>
        <label>Purchase Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Storage_Purchasing_Path__c</fullName>
        <label>Speciality Product Purchase Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Track__c</fullName>
        <label>Partner Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTM__c</fullName>
        <label>RTM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Motion__c</fullName>
        <label>Sales Motion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Partner_Track__c</fullName>
        <label>Partner Program Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Partner_Tier__c</fullName>
        <label>Storage Partner Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDA_200_OEM__c</fullName>
        <label>UDA 200 (OEM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDA_202__c</fullName>
        <label>UDA 202</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Motion Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_Partner_Track__c</columns>
        <columns>Secondary_Partner_Track__c</columns>
        <columns>Sales_Motion__c</columns>
        <columns>Partner_Program_Tier__c</columns>
        <columns>Partner_Purchasing_Path__c</columns>
        <columns>Partner_Storage_Purchasing_Path__c</columns>
        <columns>RTM__c</columns>
        <columns>Account_Category__c</columns>
        <columns>BPP_Tier__c</columns>
        <columns>BPP_Track__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SMM-{0000000}</displayFormat>
        <label>Sales Motion Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Motion Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>